--- a/Employee Register Form/src/main/webapp/WEB-INF/web.xml
+++ b/Employee Register Form/src/main/webapp/WEB-INF/web.xml
@@ -11,12 +11,12 @@
   </welcome-file-list>
   
   <servlet>
-  	<servlet-name>register</servlet-name>
-  	<servlet-class>package com.emp.servlet.Register</servlet-class>
+  	<servlet-name>RegisterServlet</servlet-name>
+  	<servlet-class>com.emp.controller.RegisterServlet</servlet-class>
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>register</servlet-name>
+  	<servlet-name>RegisterServlet</servlet-name>
   	<url-pattern>/register</url-pattern>
   </servlet-mapping>
   
